3d carousel component is working, playing with styling options for previous and next buttons, need to adjust card styling for contact page andOr create new component

--- a/public/PORTFOLIOPROJECTS.json
+++ b/public/PORTFOLIOPROJECTS.json
@@ -3,7 +3,7 @@
     {
       "key": 1,
       "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title",
+      "title": "Placeholder Title 1",
       "content": "content",
       "github": "https://www.github.com/juneadam",
       "deploy": ""
@@ -11,7 +11,7 @@
     {
       "key": 2,
       "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title",
+      "title": "Placeholder Title 2",
       "content": "content",
       "github": "https://www.github.com/juneadam",
       "deploy": ""
@@ -19,7 +19,7 @@
     {
       "key": 3,
       "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title",
+      "title": "Placeholder Title 3",
       "content": "content",
       "github": "https://www.github.com/juneadam",
       "deploy": ""
@@ -27,7 +27,7 @@
     {
       "key": 4,
       "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title",
+      "title": "Placeholder Title 4",
       "content": "content",
       "github": "https://www.github.com/juneadam",
       "deploy": ""
@@ -35,7 +35,7 @@
     {
       "key": 5,
       "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title",
+      "title": "Placeholder Title 5",
       "content": "content",
       "github": "https://www.github.com/juneadam",
       "deploy": ""
@@ -43,7 +43,7 @@
     {
       "key": 6,
       "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title",
+      "title": "Placeholder Title 6",
       "content": "content",
       "github": "https://www.github.com/juneadam",
       "deploy": ""
