updated styling on carousel buttons to better match select state glow of the carousel itself - began updating PORTFOLIOPORJECTS.json with actual project data

--- a/public/PORTFOLIOPROJECTS.json
+++ b/public/PORTFOLIOPROJECTS.json
@@ -2,11 +2,11 @@
   "data": [
     {
       "key": 0,
-      "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title 1",
+      "image": "https://i.imgur.com/J1ZyURF.png",
+      "title": "Poetry Toolkit",
       "content": "content",
-      "github": "https://www.github.com/juneadam",
-      "deploy": ""
+      "github": "https://www.github.com/juneadam/poetry-app",
+      "deploy": "http://3.88.39.80/"
     },
     {
       "key": 1,
