tightened up styling on the card and tweaked the logic for the button arraythat displays links - might need to break out the JSX for buttons into their own components

--- a/public/PORTFOLIOPROJECTS.json
+++ b/public/PORTFOLIOPROJECTS.json
@@ -14,7 +14,7 @@
     },
     {
       "key": 1,
-      "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
+      "image": "https://i.imgur.com/Ryj2G6o.png",
       "title": "Placeholder Title 2",
       "content": "content",
       "github": "https://www.github.com/juneadam",
