--- a/public/PORTFOLIOPROJECTS.json
+++ b/public/PORTFOLIOPROJECTS.json
@@ -1,56 +1,88 @@
 {
   "data": [
     {
-      "key": 0,
       "image": "https://i.imgur.com/GCL1CjC.png",
       "title": "Poetry Toolkit",
-      "content": "Tools for inspiring poets! Built with Python, JavaScript, HTML, CSS, PostgreSQL, React, Flask, Jinja2, SQLAlchemy, Bootstrap, and using the PoetryDB API",
-      "github": "https://www.github.com/juneadam/poetry-app",
+      "content": "Tools for inspiring poets! Built with Python, JavaScript, HTML, CSS, PostgreSQL, React, Flask, Jinja2, SQLAlchemy, Bootstrap, and using the PoetryDB API.",
+      "github": "https://github.com/juneadam/poetry-app",
       "githubIcon": "fa-brands fa-github",
       "deploy": "http://3.88.39.80/",
       "deployIcon": "fa-solid fa-pen",
       "demo": "https://youtu.be/WwlgrRZlsmM",
-      "demoIcon": "fa-brands fa-youtube"
+      "demoIcon": "fa-brands fa-youtube",
+      "etc": "",
+      "etcLink": "",
+      "etcIcon": ""
     },
     {
-      "key": 1,
       "image": "https://i.imgur.com/Ryj2G6o.png",
-      "title": "Placeholder Title 2",
-      "content": "content",
-      "github": "https://www.github.com/juneadam",
-      "deploy": ""
+      "title": "BirdDex",
+      "content": "A very familiar looking encyclopedia of (mostly nonfictional) birds. A collaboration with the fabulous @bethanylynn (check out her Github)!",
+      "github": "https://github.com/juneadam/bird-app",
+      "githubIcon": "fa-brands fa-github",
+      "deploy": "",
+      "deployIcon": "fa-solid fa-kiwi-bird",
+      "demo": "",
+      "demoIcon": "",
+      "etc": "Bethany's GitHub",
+      "etcLink": "https://github.com/bethany-lynn",
+      "etcIcon": "fa-brands fa-github"
     },
     {
-      "key": 2,
-      "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title 3",
-      "content": "content",
-      "github": "https://www.github.com/juneadam",
-      "deploy": ""
+      "image": "https://i.imgur.com/TCbFvYt.png",
+      "title": "Silverstone Contracting",
+      "content": "A playful and colorful website for a small business in California. Python/Flask, HTML, CSS. Mobile-first design. Built and designed in collaboration with the wonderful @dr-acc (check out her GitHub)!",
+      "github": "https://github.com/dr-acc/Silverstone_Contracting",
+      "githubIcon": "fa-brands fa-github",
+      "deploy": "",
+      "deployIcon": "",
+      "demo": "",
+      "demoIcon": "",
+      "etc": "Alena's GitHub",
+      "etcLink": "https://github.com/dr-acc",
+      "etcIcon": "fa-brands fa-github"
     },
     {
-      "key": 3,
-      "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title 4",
-      "content": "content",
-      "github": "https://www.github.com/juneadam",
-      "deploy": ""
+      "image": "https://i.imgur.com/v8FMbg3.png",
+      "title": "Empower Counseling",
+      "content": "(Still under construction!) A clean and inviting design for a private practice in Tennessee. Python/Flask, HTML, CSS. Mobile-first design. Built and designed with the talented @alexray113 (Check out their GitHub)!",
+      "github": "https://github.com/alexray113/empower-website-new",
+      "githubIcon": "fa-brands fa-github",
+      "deploy": "",
+      "deployIcon": "",
+      "demo": "",
+      "demoIcon": "",
+      "etc": "Alex's GitHub",
+      "etcLink": "https://github.com/alexray113",
+      "etcIcon": "fa-brands fa-github"
     },
     {
-      "key": 4,
-      "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title 5",
-      "content": "content",
-      "github": "https://www.github.com/juneadam",
-      "deploy": ""
+      "image": "https://i.imgur.com/ZkiEqpJ.png",
+      "title": "CSV Converter",
+      "content": "A simple Python project to easily convert a CSV file into a JSON file. Front-end integration coming soon! ",
+      "github": "https://github.com/juneadam/csv-converter",
+      "githubIcon": "fa-brands fa-github",
+      "deploy": "",
+      "deployIcon": "",
+      "demo": "",
+      "demoIcon": "",
+      "etc": "",
+      "etcLink": "",
+      "etcIcon": ""
     },
     {
-      "key": 5,
-      "image": "/aiony-haust-3TLl_97HNJo-unsplash.jpg",
-      "title": "Placeholder Title 6",
-      "content": "content",
+      "image": "https://i.imgur.com/Y7XOjwn.png",
+      "title": "Weather App",
+      "content": "Weather app built using the OpenWeather API. HTML, CSS, Bootstrap, JavaScript",
       "github": "https://www.github.com/juneadam",
-      "deploy": ""
+      "githubIcon": "fa-brands fa-github",
+      "deploy": "https://www.shecodes.io/workshops/shecodes-plus-c56a88e6-9119-4d7e-9130-a5d057b6a053/projects/640611",
+      "deployIcon": "fa-solid fa-cloud-sun-rain",
+      "demo": "",
+      "demoIcon": "",
+      "etc": "",
+      "etcLink": "",
+      "etcIcon": ""
     }
   ]
 }
