--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "@flydotio/dockerfile": "^0.2.16",
+    "tailwindcss": "^3.3.2",
+    "babel-preset-react-app": "@babel/plugin-proposal-private-property-in-object"
   }
 }
