--- a/public/PORTFOLIOPROJECTS.json
+++ b/public/PORTFOLIOPROJECTS.json
@@ -47,9 +47,9 @@
     },
     {
       "key": 3,
-      "image": "https://i.imgur.com/v8FMbg3.png",
+      "image": "https://i.imgur.com/4hZ7ylt.png",
       "title": "Empower Counseling",
-      "content": "(Still under construction!) A clean and inviting design for a private practice in Tennessee. Python/Flask, HTML, CSS. Mobile-first design. Built and designed with the talented @alexray113 (Check out their GitHub)!",
+      "content": "A clean and inviting design for a private practice in Tennessee. Python/Flask, HTML, CSS. Mobile-first design. Built and designed with the talented @alexray113 (Check out their GitHub)!",
       "github": "https://github.com/alexray113/empower-website-new",
       "githubIcon": "fa-brands fa-github",
       "deploy": "",
